log
Sun 10 Sep 2023 01:37:36 AM UTC: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   55 |   map->bucket[indice] = par;
      |        ^~~~~~
      |        buckets
hashmap.c:56:16: error: assignment to ‘long int’ from ‘char * (*)(const char *, int)’ makes integer from pointer without a cast [-Werror=int-conversion]
   56 |   map->current = index;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
6b7bbe0
Sun 10 Sep 2023 01:39:01 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:16: error: assignment to ‘long int’ from ‘char * (*)(const char *, int)’ makes integer from pointer without a cast [-Werror=int-conversion]
   56 |   map->current = index;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
515e5e6
Sun 10 Sep 2023 01:39:29 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
859818a
Sun 10 Sep 2023 01:43:52 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  4|5
total_score: 20/70
4f6ffdd
Sun 10 Sep 2023 01:51:24 AM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:78:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   78 |   MAP->buckets = (Pair *) malloc(sizeof(Pair ) * capacity);
      |                ^
cc1: all warnings being treated as errors
Compilation failed
9ba7d18
Sun 10 Sep 2023 01:51:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
3bdf7d7
Sun 10 Sep 2023 01:57:24 AM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:80:33: error: ‘EXIT_FAILUR’ undeclared (first use in this function); did you mean ‘EXIT_FAILURE’?
   80 |   if(MAP->buckets == NULL) exit(EXIT_FAILUR);
      |                                 ^~~~~~~~~~~
      |                                 EXIT_FAILURE
hashmap.c:80:33: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0643d1b
Sun 10 Sep 2023 01:57:33 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
852aaf3
Sun 10 Sep 2023 02:10:01 AM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:102:8: error: unused variable ‘primerIndice’ [-Werror=unused-variable]
  102 |   long primerIndice = indice; // como es circular, si llega al indice inicial entonces significa que no esta.
      |        ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7437ba3
Sun 10 Sep 2023 02:10:30 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 30/70
19d9ba4
